--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bootstrap-datepicker": "^1.10.0",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "jquery": "^3.7.1",
+    "mocha": "11.1.0",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
-    "pg": "^8.13.3",
-    "mocha": "11.1.0"
+    "pg": "^8.13.3"
   },
   "devDependencies": {
     "dotenv": "^16.4.7",
